--- a/pd_frontend/package.json
+++ b/pd_frontend/package.json
@@ -4,17 +4,19 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "latest",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "ace-builds": "^1.4.12",
     "axios": "^0.19.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "recharts": "^1.8.5",
+    "clsx": "latest",
     "prop-types": "latest",
-    "@material-ui/icons": "latest",
-    "clsx": "latest"
+    "react": "^16.13.1",
+    "react-ace": "^9.1.3",
+    "react-dom": "^16.13.1",
+    "react-scripts": "^3.4.3",
+    "recharts": "^1.8.5"
   },
   "scripts": {
     "start": "react-scripts start",
